<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionBottomNavigationConstraint"
        android:icon="@drawable/ic_earth"
        android:title="@string/constraint" />
    <item
        android:id="@+id/actionBottomNavigationCoordinator"
        android:icon="@drawable/ic_system"
        android:title="@string/coordinator" />

    <item
        android:id="@+id/actionBottomNavigationMotion"
        android:icon="@drawable/ic_mars"
        android:title="@string/motion" />
    <item
        android:id="@+id/actionBottomNavigationAnimations"
        android:icon="@drawable/ic_animation"
        android:title="@string/animations" />
    <item
        android:id="@+id/actionBottomNavigationRecycler"
        android:icon="@drawable/ic_animation"
        android:title="@string/recycler" />
</menu>