<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsFragment">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="tab_menu_one"
            android:text="@string/menu_one" />

        <com.google.android.material.tabs.TabItem
            android:tag="tab_menu_two"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/menu_two" />

        <com.google.android.material.tabs.TabItem
            android:tag="tab_menu_three"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/menu_three" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipYesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThirdDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_day" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>